--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
   margin-top: 10px;
   position: absolute;
   bottom: -45px;
-  left: 170px;
+  left: 50%;
+  transform: translateX(-50%);
   padding: 5px 14px;
   font-size: 16px;
   color: white;
@@ -59,6 +60,10 @@
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   text-align: center;
   padding-top: 10px;
+}
+
+.game__scores {
+  display: none;
 }
 
 .animate {
